# cardano-world

./: .editorconfig  .envrc  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  book.toml  cabal.project  flake.nix  treefmt.toml  upload-to-cache.sh
.jira.d/: config.yml
.reuse/: dep5
cardano-tracer/: cardano-tracer.cabal
devshell/: flake.nix  netrc.md
docs/: SUMMARY.md  cost-model.md  environments.md
docs/environments/: .editorconfig
docs/environments/mainnet/: config.json  topology-p2p.json
docs/environments/mixed/: config.json  db-sync-config.json  shelley-genesis.json  submit-api-config.json  topology.json
docs/environments/preprod/: config.json  topology.json
docs/environments/preview/: config.json  conway-genesis.json  topology.json
docs/environments/private/: byron-genesis.json  config.json  db-sync-config.json  submit-api-config.json  topology.json
docs/environments/pv8/: config.json  db-sync-config.json  submit-api-config.json  topology.json
docs/environments/sanchonet/: config.json
docs/environments/shelley-qa/: config.json  db-sync-config.json  submit-api-config.json  topology.json
docs/environments/staging/: config.json  db-sync-config.json  submit-api-config.json
docs/environments/testnet/: db-sync-config.json  submit-api-config.json
docs/environments/vasil-dev/: config.json  db-sync-config.json  submit-api-config.json  topology.json
docs/environments/vasil-qa/: config.json  db-sync-config.json  submit-api-config.json  topology.json
docs/explain/: create-testnet.md  packaging-principles.md
docs/resources/: cost-model-secp-preprod-mainnet.json  plutus-costmodels-secp256k1-3.json
ekg-forward/: README.md  ekg-forward.cabal
ekg-forward/demo/: README.md  acceptor.hs  forwarder.hs
ekg-forward/test/: Spec.hs
ekg-forward/test/Test/: GetAllMetrics.hs  GetMetrics.hs  MkConfig.hs
network-mux/: network-mux.cabal
nix/automation/: devshells.nix  hydraJobs.nix  jobs.nix  nixago.nix  pipelines.nix  push-node-snapshot.sh
nix/automation/devshells/: Readme.md
nix/cardano/: alerts.nix  constants.nix  dashboards.nix  devshellProfiles.nix  entrypoints.nix  healthChecks.nix  hydraJobs.nix  hydrationProfiles.nix  library.nix  nomadJob.nix  oci-images.nix
nix/cardano/config-data/: default.nix  marlowe-pioneers-config.nix  shelley_qa-config.nix  sre.nix  testnet-config.nix
nix/cardano/dashboards/: application-metrics.json  dbsync.json  faucet.json  nginx-basic.json  nginx-vts.json  node-exporter.json  p2p.json  varnish.json  wireguard.json
nix/cardano/environments/: alonzo-purple-config.nix  default.nix  mainnet-config.nix  mixed-config.nix  p2p-config.nix  preprod-config.nix  preview-config.nix  private-config.nix  pv8-config.nix  shelley_qa-config.nix  staging-config.nix  vasil-dev-config.nix  vasil-qa-config.nix
nix/cardano/healthChecks/: default.nix  node-network-sync-check.sh
nix/cardano/justTasks/: default.nix
nix/cardano/nomadCharts/: cardano-db-sync-with-ogmios.nix  cardano-db-sync.nix  cardano-faucet.nix  cardano-graphql.nix  cardano-node.nix  cardano-wallet.nix  db-sync-query.nix  default.nix  metadata.nix  ogmios.nix  oura.nix  srv-db-sync.nix  srv-metadata-server.nix  srv-metadata-varnish.nix  srv-metadata-webhook.nix  srv-node-local.nix  srv-node.nix  srv-ogmios.nix  srv-submit-api.nix  srv-wallet.nix
nix/cardano/nomadJob/: cardano-db-sync.nix  cardano-node.nix  cardano-submit-api.nix  cardano-wallet.nix  default.nix  ogmios.nix  oura.nix  scrolls.nix  srv-db-sync.nix  srv-node.nix  (+5 more)
nix/cloud/: README.md  actions.nix  alerts.nix  constants.nix  dashboards.nix  entrypoints.nix  hydrationProfile.nix  hydrationProfiles.nix  library.nix  nomadEnvs.nix  oci-images.nix
nix/docs/: entrypoints.nix  nomadCharts.nix  nomadJob.nix  oci-images.nix  packages.nix
nix/metal/: NOTES.md  bitteProfile.nix  equinix.nix  monitoring.nix  ziti-register.nix  ziti.nix
ouroboros-network/: ouroboros-network.cabal
scripts/: dbsync-pool-perf.sh  dbsync-pool-perf.sql  distribute.py  iptables-cleanup-fn.sh  restore-delegation-accounts.py  setup-delegation-accounts.py
src/cardano-cli/: cardano-cli.cabal
src/cardano-faucet/: README.md  cardano-faucet.cabal  cardano-faucet.cr  cardano-module.cr  cardano-new-faucet.hs  default.nix  general.cr  setup.cr  shard.yml  shards.nix
src/cardano-faucet/classes/: account.cr  api-exception.cr  fees.cr  settings.cr  txs.cr  wallet.cr
src/cardano-faucet/data/: index.html
src/cardano-faucet/src/Cardano/: Faucet.hs
src/cardano-faucet/src/Cardano/CLI/: Faucet.hs
src/cardano-faucet/src/Cardano/CLI/Faucet/: Types.hs  Web.hs
src/cardano-faucet/src/Cardano/Faucet/: Misc.hs  TxUtils.hs  Types.hs  Utils.hs  Web.hs
src/cardano-tracer/: cardano-tracer.cabal
src/db-sync-query/: Main.hs  db-sync-query.cabal  flake.nix  package.yaml
src/ekg-forward/: CHANGELOG.md  LICENSE  README.md  ekg-forward.cabal
src/ekg-forward/demo/: README.md  acceptor.hs  forwarder.hs
src/ekg-forward/src/: EkgForward.hs
src/ekg-forward/src/System/Metrics/: Acceptor.hs  Configuration.hs  Forwarder.hs  Metric.hs  Request.hs  Response.hs
src/ekg-forward/src/System/Metrics/Acceptor/: Network.hs  Store.hs
src/ekg-forward/src/System/Metrics/Forwarder/: Network.hs  Store.hs
src/ekg-forward/src/System/Metrics/Internal/: Response.hs
src/ekg-forward/src/System/Metrics/Internal/Protocol/: Acceptor.hs  Codec.hs  Forwarder.hs  Type.hs
src/ekg-forward/src/System/Metrics/Network/: Acceptor.hs  Forwarder.hs
src/ekg-forward/src/System/Metrics/Protocol/: Codec.hs  Forwarder.hs  Type.hs
src/ekg-forward/src/System/Metrics/Store/: Acceptor.hs  Forwarder.hs
src/ekg-forward/src/System/Metrics/Typed/: Core.hs  Protocol.hs
src/ekg-forward/test/: Spec.hs
src/ekg-forward/test/Test/: GetAllMetrics.hs  GetMetrics.hs  MkConfig.hs
src/network-mux/: network-mux.cabal
src/ouroboros-network/: ouroboros-network.cabal
tf/: terraform-clients.tfstate.enc  terraform-core.tfstate.enc  terraform-equinix.tfstate.enc  terraform-hydrate-app.tfstate.enc  terraform-hydrate-cluster.tfstate.enc  terraform-hydrate-monitoring.tfstate.enc
(+245 files in other folders)
