cabal-version: 3.0

name:                   cardano-faucet
version:                1.35.1
description:            The Cardano command-line interface.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
     build-depends:    unix

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.Faucet

  other-modules:        Cardano.Faucet.Misc
                        Cardano.Faucet.TxUtils
                        Cardano.Faucet.Types
                        Cardano.Faucet.Utils
                        Cardano.Faucet.Web

  build-depends:        aeson             >= 1.5.6.0
                      , MissingH
                      , bytestring
                      , cardano-addresses
                      , cardano-api
                      , cardano-cli
                      , cardano-ledger-byron
                      , cardano-prelude
                      , containers
                      , http-api-data
                      , http-client-tls
                      , iproute
                      , network
                      , ouroboros-consensus
                      , ouroboros-network
                      , parsec
                      , servant-client
                      , servant-server
                      , split
                      , stm
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , unordered-containers
                      , warp

executable cardano-new-faucet
  import:               base, project-config
  main-is:              cardano-new-faucet.hs
  build-depends:        cardano-faucet
