cabal-version:       2.4
name:                ekg-forward
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/dshevchenko/ekg-forward
bug-reports:         https://github.com/dshevchenko/ekg-forward/issues
license:             MIT
license-file:        LICENSE
author:              Denis Shevchenko
maintainer:          Denis Shevchenko <denis.shevchenko@iohk.io>
copyright:           2021 Denis Shevchenko
category:            System, Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/dshevchenko/ekg-forward.git

common common-options
  build-depends:       base ^>= 4.13.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     EkgForward

test-suite ekg-forward-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ekg-forward
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
